--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "strict": true
   },
   "tasks": {
-    "start": "deno run --allow-net main.ts",
+    "start": "deno run --allow-net --allow-read --allow-env main.ts",
     "lint": "deno lint"
   }
 }
