--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,7 @@
   },
   "tasks": {
     "start": "deno run --allow-net --allow-read --allow-env --unstable main.ts",
-    "lint": "deno lint"
+    "lint": "deno lint",
+    "fmt": "deno fmt"
   }
 }
